# rust-blog-api

./: .docker.env  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  Rocket.toml  Rustfmt.toml  docker-compose.yml  fixtures.sql
api/: Cargo.toml
api/src/: error.rs  main.rs
api/src/query/: collection.rs  csv.rs  decode.rs  error.rs  fields.rs  include.rs  member.rs  mod.rs  page.rs
api/src/routes/: authors.rs  comments.rs  mod.rs  posts.rs  root.rs  tags.rs
api/src/routes/authors/: collection.rs  fields.rs  include.rs  member.rs  mod.rs  params.rs
db/: Cargo.toml
db/migrations/20170708220619_create_authors/: up.sql
db/migrations/20170708220623_create_comments/: down.sql  up.sql
db/migrations/20170708220629_create_posts/: up.sql
db/migrations/20170708220632_create_tags/: up.sql
db/src/: lib.rs  model.rs  pool.rs  prelude.rs  types.rs
db/src/models/: author.rs  comment.rs  mod.rs  post.rs  tag.rs
fmt/: Cargo.toml
fmt/src/: error.rs  lib.rs
fmt/src/jsonapi/: document.rs  macros.rs  mod.rs  resource.rs  statics.rs  types.rs
migrations/20161227153751_create_posts/: up.sql
migrations/20161227233434_create_authors/: up.sql
migrations/20161228173648_add_author_to_posts/: down.sql  up.sql
src/: main.rs  pool.rs
src/models/: author.rs  mod.rs  post.rs
src/routes/: application.rs  authors.rs  errors.rs  mod.rs  posts.rs
