[package]
name = "blog-api"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
blog-db = { path = "../db" }
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"

[dependencies.rocket]
branch = "master"
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_codegen]
branch = "master"
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_contrib]
branch = "master"
git = "https://github.com/SergioBenitez/Rocket"
